[dq6] Fixed the wrong html code for underline math formulae.

--- a/dqrobotics/lesson6/lesson_dq6_robot_control_basics_part2.ipynb
+++ b/dqrobotics/lesson6/lesson_dq6_robot_control_basics_part2.ipynb
@@ -48,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -108,7 +108,7 @@
     "The first joint enacts a pose transformation from the reference frame of the first joint to the reference frame of the second joint given by\n",
     "\n",
     "\n",
-    "$${<u>x</u> }_1^0 \\left(\\theta_1 \\right)\\triangleq {<u>x</u> }_1^0 \\in \\underline{{\\mathcal{S}}}$$\n",
+    "$${\\underline{ x } }_1^0 \\left(\\theta_1 \\right)\\triangleq {\\underline{ x } }_1^0 \\in \\underline{{\\mathcal{S}}}$$\n",
     "\n",
     "that depends on the joint value of the first joint.\n",
     "\n",
@@ -116,7 +116,7 @@
     "Given that the 3-DoF planar robot has three joints, the robot can be modeled with three consecutive transformations\n",
     "\n",
     "\n",
-    "$${<u>x</u> }_R ={<u>x</u> }_1^0 {<u>x</u> }_2^1 {<u>x</u> }_3^2 ,$$\n",
+    "$${\\underline{ x } }_R ={\\underline{ x } }_1^0 {\\underline{ x } }_2^1 {\\underline{ x } }_3^2 ,$$\n",
     "\n",
     "where ${\\underline{x} }_2^1 \\left(\\theta_2 \\right)\\triangleq {\\underline{x} }_2^1 \\in \\underline{{\\mathcal{S}}}$ and ${\\underline{x} }_3^2 \\left(\\theta_3 \\right)\\triangleq {\\underline{x} }_3^2 \\in \\underline{{\\mathcal{S}}}$ . This sequence of transformation is a methodology that can be used for a serial manipulator with any number of joints.\n",
     "\n",
@@ -124,27 +124,27 @@
     "The DH parameters provide a systematic way to calculate each individual joint transformation of any n-DoF serial manipulator.  Each joint transformation, ${\\underline{x} }_i^{i-1} \\left(\\theta_i \\right)\\triangleq {\\underline{x} }_i^{i-1} \\in \\underline{{\\mathcal{S}}}$ , with $i=1,2,3\\ldotp \\ldotp \\ldotp n$ is composed of four intermediate transformations, as follows\n",
     "\n",
     "\n",
-    "$${<u>x</u> }_i^{i-1} \\triangleq {<u>x</u> }_{i^{\\prime } }^i \\left(\\theta_i \\right){<u>x</u> }_{i^{\\prime \\prime } }^{i^{\\prime } } \\left(d_i \\right){<u>x</u> }_{i^{\\prime \\prime \\prime } }^{i^{\\prime \\prime } } \\left(a_i \\right){<u>x</u> }_i^{i^{\\prime \\prime \\prime } } \\left(\\alpha_i \\right),$$\n",
+    "$${\\underline{ x } }_i^{i-1} \\triangleq {\\underline{ x } }_{i^{\\prime } }^i \\left(\\theta_i \\right){\\underline{ x } }_{i^{\\prime \\prime } }^{i^{\\prime } } \\left(d_i \\right){\\underline{ x } }_{i^{\\prime \\prime \\prime } }^{i^{\\prime \\prime } } \\left(a_i \\right){\\underline{ x } }_i^{i^{\\prime \\prime \\prime } } \\left(\\alpha_i \\right),$$\n",
     "\n",
     "where the DH parameters, for each joint, are $\\theta_i ,d_i ,a_i ,\\alpha_i \\in \\mathbb{R}$ . Each of those parameters is related to one transformation. The first is the rotation of $\\theta_i$ about the z-axis of frame ${\\mathcal{F}}_{i-1}$\n",
     "\n",
     "\n",
-    "$${<u>x</u> }_{i^{\\prime } }^{i-1} \\left(\\theta_i \\right)=\\cos \\left(\\frac{\\theta_i }{2}\\right)+\\hat{k} \\sin \\left(\\frac{\\theta_i }{2}\\right),$$\n",
+    "$${\\underline{ x } }_{i^{\\prime } }^{i-1} \\left(\\theta_i \\right)=\\cos \\left(\\frac{\\theta_i }{2}\\right)+\\hat{k} \\sin \\left(\\frac{\\theta_i }{2}\\right),$$\n",
     "\n",
     "the second is a translation of $d_i$ about the z-axis of frame ${\\mathcal{F}}_{i^{\\prime } }$ ,\n",
     "\n",
     "\n",
-    "$${<u>x</u> }_{i^{\\prime \\prime } }^{i^{\\prime } } \\left(d_i \\right)=1+\\varepsilon \\frac{1}{2}\\hat{k} d_i ,$$\n",
+    "$${\\underline{ x } }_{i^{\\prime \\prime } }^{i^{\\prime } } \\left(d_i \\right)=1+\\varepsilon \\frac{1}{2}\\hat{k} d_i ,$$\n",
     "\n",
     "the third is the translation of $a_i$ about the x-axis of frame ${\\mathcal{F}}_{i^{\\prime \\prime } }$ ,\n",
     "\n",
     "\n",
-    "$${<u>x</u> }_{i^{\\prime \\prime \\prime } }^{i^{\\prime \\prime } } \\left(a_i \\right)=1+\\varepsilon \\frac{1}{2}\\hat{\\imath} a_i ,$$\n",
+    "$${\\underline{ x } }_{i^{\\prime \\prime \\prime } }^{i^{\\prime \\prime } } \\left(a_i \\right)=1+\\varepsilon \\frac{1}{2}\\hat{\\imath} a_i ,$$\n",
     "\n",
     "the fourth, and last, is the rotation of $\\alpha_i$ about the x-axis of frame ${\\mathcal{F}}_{i^{\\prime \\prime \\prime } }$\n",
     "\n",
     "\n",
-    "$${<u>x</u> }_i^{i^{\\prime \\prime \\prime } } \\left(\\alpha_i \\right)=\\cos \\left(\\frac{\\alpha_i }{2}\\right)+\\hat{\\imath} \\sin \\left(\\frac{\\alpha_i }{2}\\right).$$\n",
+    "$${\\underline{ x } }_i^{i^{\\prime \\prime \\prime } } \\left(\\alpha_i \\right)=\\cos \\left(\\frac{\\alpha_i }{2}\\right)+\\hat{\\imath} \\sin \\left(\\frac{\\alpha_i }{2}\\right).$$\n",
     "\n",
     "Back to our example, the following table summarizes the DH parameters of the 3-DoF planar robot.\n",
     "\n",
@@ -213,7 +213,7 @@
     "The first joint enacts a pose transformation from the reference frame of the first joint to the reference frame of the second joint given by\n",
     "\n",
     "\n",
-    "$${<u>x</u> }_1^0 \\left(\\theta_1 \\right)\\triangleq {<u>x</u> }_1^0 \\in \\underline{{\\mathcal{S}}}$$\n",
+    "$${\\underline{ x } }_1^0 \\left(\\theta_1 \\right)\\triangleq {\\underline{ x } }_1^0 \\in \\underline{{\\mathcal{S}}}$$\n",
     "\n",
     "that depends on the joint value of the first joint.\n",
     "\n",
@@ -221,7 +221,7 @@
     "Given that the 3-DoF planar robot has three joints, the robot can be modeled with three consecutive transformations\n",
     "\n",
     "\n",
-    "$${<u>x</u> }_R ={<u>x</u> }_1^0 {<u>x</u> }_2^1 {<u>x</u> }_3^2 ,$$\n",
+    "$${\\underline{ x } }_R ={\\underline{ x } }_1^0 {\\underline{ x } }_2^1 {\\underline{ x } }_3^2 ,$$\n",
     "\n",
     "where ${\\underline{x} }_2^1 \\left(\\theta_2 \\right)\\triangleq {\\underline{x} }_2^1 \\in \\underline{{\\mathcal{S}}}$ and ${\\underline{x} }_3^2 \\left(\\theta_3 \\right)\\triangleq {\\underline{x} }_3^2 \\in \\underline{{\\mathcal{S}}}$ . This sequence of transformation is a methodology that can be used for a serial manipulator with any number of joints.\n",
     "\n",
@@ -229,27 +229,27 @@
     "The DH parameters provide a systematic way to calculate each individual joint transformation of any n-DoF serial manipulator.  Each joint transformation, ${\\underline{x} }_i^{i-1} \\left(\\theta_i \\right)\\triangleq {\\underline{x} }_i^{i-1} \\in \\underline{{\\mathcal{S}}}$ , with $i=1,2,3\\ldotp \\ldotp \\ldotp n$ is composed of four intermediate transformations, as follows\n",
     "\n",
     "\n",
-    "$${<u>x</u> }_i^{i-1} \\triangleq {<u>x</u> }_{i^{\\prime } }^i \\left(\\theta_i \\right){<u>x</u> }_{i^{\\prime \\prime } }^{i^{\\prime } } \\left(d_i \\right){<u>x</u> }_{i^{\\prime \\prime \\prime } }^{i^{\\prime \\prime } } \\left(a_i \\right){<u>x</u> }_i^{i^{\\prime \\prime \\prime } } \\left(\\alpha_i \\right),$$\n",
+    "$${\\underline{ x } }_i^{i-1} \\triangleq {\\underline{ x } }_{i^{\\prime } }^i \\left(\\theta_i \\right){\\underline{ x } }_{i^{\\prime \\prime } }^{i^{\\prime } } \\left(d_i \\right){\\underline{ x } }_{i^{\\prime \\prime \\prime } }^{i^{\\prime \\prime } } \\left(a_i \\right){\\underline{ x } }_i^{i^{\\prime \\prime \\prime } } \\left(\\alpha_i \\right),$$\n",
     "\n",
     "where the DH parameters, for each joint, are $\\theta_i ,d_i ,a_i ,\\alpha_i \\in \\mathbb{R}$ . Each of those parameters is related to one transformation. The first is the rotation of $\\theta_i$ about the z-axis of frame ${\\mathcal{F}}_{i-1}$\n",
     "\n",
     "\n",
-    "$${<u>x</u> }_{i^{\\prime } }^{i-1} \\left(\\theta_i \\right)=\\cos \\left(\\frac{\\theta_i }{2}\\right)+\\hat{k} \\sin \\left(\\frac{\\theta_i }{2}\\right),$$\n",
+    "$${\\underline{ x } }_{i^{\\prime } }^{i-1} \\left(\\theta_i \\right)=\\cos \\left(\\frac{\\theta_i }{2}\\right)+\\hat{k} \\sin \\left(\\frac{\\theta_i }{2}\\right),$$\n",
     "\n",
     "the second is a translation of $d_i$ about the z-axis of frame ${\\mathcal{F}}_{i^{\\prime } }$ ,\n",
     "\n",
     "\n",
-    "$${<u>x</u> }_{i^{\\prime \\prime } }^{i^{\\prime } } \\left(d_i \\right)=1+\\varepsilon \\frac{1}{2}\\hat{k} d_i ,$$\n",
+    "$${\\underline{ x } }_{i^{\\prime \\prime } }^{i^{\\prime } } \\left(d_i \\right)=1+\\varepsilon \\frac{1}{2}\\hat{k} d_i ,$$\n",
     "\n",
     "the third is the translation of $a_i$ about the x-axis of frame ${\\mathcal{F}}_{i^{\\prime \\prime } }$ ,\n",
     "\n",
     "\n",
-    "$${<u>x</u> }_{i^{\\prime \\prime \\prime } }^{i^{\\prime \\prime } } \\left(a_i \\right)=1+\\varepsilon \\frac{1}{2}\\hat{\\imath} a_i ,$$\n",
+    "$${\\underline{ x } }_{i^{\\prime \\prime \\prime } }^{i^{\\prime \\prime } } \\left(a_i \\right)=1+\\varepsilon \\frac{1}{2}\\hat{\\imath} a_i ,$$\n",
     "\n",
     "the fourth, and last, is the rotation of $\\alpha_i$ about the x-axis of frame ${\\mathcal{F}}_{i^{\\prime \\prime \\prime } }$\n",
     "\n",
     "\n",
-    "$${<u>x</u> }_i^{i^{\\prime \\prime \\prime } } \\left(\\alpha_i \\right)=\\cos \\left(\\frac{\\alpha_i }{2}\\right)+\\hat{\\imath} \\sin \\left(\\frac{\\alpha_i }{2}\\right).$$\n",
+    "$${\\underline{ x } }_i^{i^{\\prime \\prime \\prime } } \\left(\\alpha_i \\right)=\\cos \\left(\\frac{\\alpha_i }{2}\\right)+\\hat{\\imath} \\sin \\left(\\frac{\\alpha_i }{2}\\right).$$\n",
     "\n",
     "Back to our example, the following table summarizes the DH parameters of the 3-DoF planar robot.\n",
     "\n",
@@ -643,18 +643,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "SyntaxError",
-     "evalue": "invalid syntax (3236932732.py, line 7)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;36m  Cell \u001b[0;32mIn[7], line 7\u001b[0;36m\u001b[0m\n\u001b[0;31m    q = [theta1 theta2 theta3];\u001b[0m\n\u001b[0m                ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Initial joint values [rad]\n",
     "theta1 = -0.1\n",
@@ -673,7 +664,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -691,16 +682,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Help on instancemethod in module dqrobotics._dqrobotics._robot_modeling:\n",
+      "\n",
+      "fkm(...)\n",
+      "    fkm(*args, **kwargs)\n",
+      "    Overloaded function.\n",
+      "    \n",
+      "    1. fkm(self: dqrobotics._dqrobotics._robot_modeling.DQ_SerialManipulator, arg0: numpy.ndarray[numpy.float64[m, 1]]) -> dqrobotics._dqrobotics.DQ\n",
+      "    \n",
+      "    Gets the fkm.\n",
+      "    \n",
+      "    2. fkm(self: dqrobotics._dqrobotics._robot_modeling.DQ_SerialManipulator, arg0: numpy.ndarray[numpy.float64[m, 1]], arg1: int) -> dqrobotics._dqrobotics.DQ\n",
+      "    \n",
+      "    Gets the fkm.\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "help(DQ_SerialManipulatorDH.fkm)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -722,7 +734,7 @@
     "Using the FKM, we find\n",
     "\n",
     "\n",
-    "$${\\textrm{vec}}_8 \\left({\\dot{<u>x</u> } }_R \\right)=\\frac{\\partial \\left({\\textrm{vec}}_8 \\left({<u>x</u> }_R \\right)\\right)}{\\partial q}\\dot{q} ,$$\n",
+    "$${\\textrm{vec}}_8 \\left({\\dot{\\underline{ x } } }_R \\right)=\\frac{\\partial \\left({\\textrm{vec}}_8 \\left({\\underline{ x } }_R \\right)\\right)}{\\partial q}\\dot{q} ,$$\n",
     "\n",
     "where $J_{{\\underline{x} }} \\triangleq \\frac{\\partial \\left({\\textrm{vec}}_8 \\left({\\underline{x} }_R \\right)\\right)}{\\partial q}$ is the pose Jacobian. We do not need to worry about the details of how to calculate this for now. The details of how to calculate the Jacobian for any serial manipulator are described from Page 38 of\n",
     "\n",
@@ -743,29 +755,29 @@
     "We can conveniently find the rotation Jacobian using the pose Jacobian. To do so, remember that the robot's end-effector pose can be decomposed as follows\n",
     "\n",
     "\n",
-    "$${<u>x</u> }_R =r_R +\\frac{1}{2}\\varepsilon t_R r_R .$$\n",
+    "$${\\underline{ x } }_R =r_R +\\frac{1}{2}\\varepsilon t_R r_R .$$\n",
     "\n",
     "That means that the first-order time-derivative is\n",
     "\n",
     "\n",
-    "$${\\textrm{vec}}_8 \\left({\\dot{<u>x</u> } }_R \\right)={\\textrm{vec}}_8 \\left(P\\left({\\dot{<u>x</u> } }_R \\right)\\right)+{\\textrm{vec}}_8 \\left(D\\left({\\dot{<u>x</u> } }_R \\right)\\right)$$\n",
+    "$${\\textrm{vec}}_8 \\left({\\dot{\\underline{ x } } }_R \\right)={\\textrm{vec}}_8 \\left(P\\left({\\dot{\\underline{ x } } }_R \\right)\\right)+{\\textrm{vec}}_8 \\left(D\\left({\\dot{\\underline{ x } } }_R \\right)\\right)$$\n",
     "\n",
     "that can be re-written as\n",
     "\n",
     "\n",
-    "$$J_{{<u>x</u> }} \\dot{q} =\\left\\lbrack \\begin{array}{c} J_{P\\left({<u>x</u> }\\right)} \\\\ 0 \\end{array}\\right\\rbrack \\dot{q} +\\left\\lbrack \\begin{array}{c} 0\\\\ J_{D\\left({<u>x</u> }\\right)}  \\end{array}\\right\\rbrack \\dot{q}$$\n",
+    "$$J_{{\\underline{ x } }} \\dot{q} =\\left\\lbrack \\begin{array}{c} J_{P\\left({\\underline{ x } }\\right)} \\\\ 0 \\end{array}\\right\\rbrack \\dot{q} +\\left\\lbrack \\begin{array}{c} 0\\\\ J_{D\\left({\\underline{ x } }\\right)}  \\end{array}\\right\\rbrack \\dot{q}$$\n",
     "\n",
     "which means that the pose Jacobian can be decomposed as\n",
     "\n",
     "\n",
-    "$$J_{{<u>x</u> }} \\dot{q} =\\left\\lbrack \\begin{array}{c} J_{P\\left({<u>x</u> }\\right)} \\\\ J_{D\\left({<u>x</u> }\\right)}  \\end{array}\\right\\rbrack \\dot{q} .$$\n",
+    "$$J_{{\\underline{ x } }} \\dot{q} =\\left\\lbrack \\begin{array}{c} J_{P\\left({\\underline{ x } }\\right)} \\\\ J_{D\\left({\\underline{ x } }\\right)}  \\end{array}\\right\\rbrack \\dot{q} .$$\n",
     "\n",
     "Notice that\n",
     "\n",
     "\n",
-    "$$J_{P\\left({<u>x</u> }\\right)} \\dot{q} ={\\textrm{vec}}_4 \\left({\\dot{r} }_R \\right)$$\n",
+    "$$J_{P\\left({\\underline{ x } }\\right)} \\dot{q} ={\\textrm{vec}}_4 \\left({\\dot{r} }_R \\right)$$\n",
     "\n",
-    "$$J_{P\\left({<u>x</u> }\\right)} \\dot{q} =J_r \\dot{q}$$\n",
+    "$$J_{P\\left({\\underline{ x } }\\right)} \\dot{q} =J_r \\dot{q}$$\n",
     "\n",
     "which means that the rotation Jacobian is  $J_r =J_{P\\left({\\underline{x} }\\right)}$ . That is, the rotational Jacobian is composed of the first four rows of the pose Jacobian.\n",
     "\n",
@@ -783,16 +795,16 @@
     "We start from the translation relation\n",
     "\n",
     "\n",
-    "$$t_R =\\textrm{translation}\\left({<u>x</u> }_R \\right)=2D\\left({<u>x</u> }_R \\right)P{\\left({<u>x</u> }_R \\right)}^*$$\n",
+    "$$t_R =\\textrm{translation}\\left({\\underline{ x } }_R \\right)=2D\\left({\\underline{ x } }_R \\right)P{\\left({\\underline{ x } }_R \\right)}^*$$\n",
     "\n",
-    "$${\\dot{t} }_R =2\\left\\lbrack D\\left({\\dot{<u>x</u> } }_R \\right)P{\\left({<u>x</u> }_R \\right)}^* +D\\left({<u>x</u> }_R \\right)P{\\left({\\dot{<u>x</u> } }_R \\right)}^* \\right\\rbrack$$\n",
+    "$${\\dot{t} }_R =2\\left\\lbrack D\\left({\\dot{\\underline{ x } } }_R \\right)P{\\left({\\underline{ x } }_R \\right)}^* +D\\left({\\underline{ x } }_R \\right)P{\\left({\\dot{\\underline{ x } } }_R \\right)}^* \\right\\rbrack$$\n",
     "\n",
-    "$${\\textrm{vec}}_4 \\left({\\dot{t} }_R \\right)=2\\left\\lbrack \\overset{-}{\\underset{4}{H}} \\left(P{\\left({<u>x</u> }_R \\right)}^* \\right)J_{D\\left({<u>x</u> }\\right)} +\\overset{+}{\\underset{4}{H}} \\left(D\\left({<u>x</u> }_R \\right)\\right)C_4 J_{P\\left({<u>x</u> }\\right)} \\right\\rbrack \\dot{q}$$\n",
+    "$${\\textrm{vec}}_4 \\left({\\dot{t} }_R \\right)=2\\left\\lbrack \\overset{-}{\\underset{4}{H}} \\left(P{\\left({\\underline{ x } }_R \\right)}^* \\right)J_{D\\left({\\underline{ x } }\\right)} +\\overset{+}{\\underset{4}{H}} \\left(D\\left({\\underline{ x } }_R \\right)\\right)C_4 J_{P\\left({\\underline{ x } }\\right)} \\right\\rbrack \\dot{q}$$\n",
     "\n",
     "hence\n",
     "\n",
     "\n",
-    "$$J_t =2\\left\\lbrack \\overset{-}{\\underset{4}{H}} \\left(P{\\left({<u>x</u> }_R \\right)}^* \\right)J_{D\\left({<u>x</u> }\\right)} +\\overset{+}{\\underset{4}{H}} \\left(D\\left({<u>x</u> }_R \\right)\\right)C_4 J_{P\\left({<u>x</u> }\\right)} \\right\\rbrack .$$\n",
+    "$$J_t =2\\left\\lbrack \\overset{-}{\\underset{4}{H}} \\left(P{\\left({\\underline{ x } }_R \\right)}^* \\right)J_{D\\left({\\underline{ x } }\\right)} +\\overset{+}{\\underset{4}{H}} \\left(D\\left({\\underline{ x } }_R \\right)\\right)C_4 J_{P\\left({\\underline{ x } }\\right)} \\right\\rbrack .$$\n",
     "<a name=\"H_7BB8E5F4\"></a>\n",
     "#### DQ Robotics Example\n",
     "\n",
@@ -801,7 +813,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -819,7 +831,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -837,7 +849,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -864,7 +876,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -891,7 +903,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -911,7 +923,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -934,7 +946,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -955,7 +967,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -975,7 +987,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -993,7 +1005,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1016,7 +1028,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1050,7 +1062,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1072,7 +1084,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1105,7 +1117,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1127,7 +1139,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1160,7 +1172,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
