[dq8] Only last code block with issues, otherwise fixed.

--- a/dqrobotics/lesson8/lesson_dq8_optimization_based_robot_control.ipynb
+++ b/dqrobotics/lesson8/lesson_dq8_optimization_based_robot_control.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 153,
+   "execution_count": 275,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 154,
+   "execution_count": 276,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -48,13 +48,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 155,
+   "execution_count": 277,
    "metadata": {},
    "outputs": [],
    "source": [
     "from math import pi\n",
     "import numpy as np\n",
     "from dqrobotics import *\n",
+    "from dqrobotics.utils import DQ_Geometry\n",
     "from dqrobotics.robot_control import ControlObjective\n",
     "from dqrobotics.robot_modeling import DQ_Kinematics"
    ]
@@ -97,7 +98,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 156,
+   "execution_count": 278,
    "metadata": {},
    "outputs": [
     {
@@ -126,7 +127,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 157,
+   "execution_count": 279,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -240,7 +241,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 158,
+   "execution_count": 280,
    "metadata": {},
    "outputs": [
     {
@@ -406,7 +407,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 159,
+   "execution_count": 281,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -425,7 +426,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 160,
+   "execution_count": 282,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -446,7 +447,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 161,
+   "execution_count": 283,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -465,7 +466,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 162,
+   "execution_count": 284,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -524,7 +525,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 163,
+   "execution_count": 285,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -663,7 +664,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 164,
+   "execution_count": 286,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -712,7 +713,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 165,
+   "execution_count": 287,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -755,7 +756,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 166,
+   "execution_count": 288,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -796,7 +797,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 167,
+   "execution_count": 289,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -835,7 +836,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 168,
+   "execution_count": 290,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -876,7 +877,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 169,
+   "execution_count": 291,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -928,12 +929,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 170,
+   "execution_count": 292,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Define the plane in the workspace\n",
-    "pi = i_\n",
+    "pi_w = i_\n",
     "\n",
     "# Get robot's pose and pose Jacobian\n",
     "x = seven_dof_planar_robot.fkm(q)\n",
@@ -944,7 +945,7 @@
     "Jt = DQ_Kinematics.translation_jacobian(Jx, x)\n",
     "\n",
     "# Get the distance Jacobian\n",
-    "Jt_pi = DQ_Kinematics.point_to_plane_distance_jacobian(Jt, t, pi)"
+    "Jt_pi = DQ_Kinematics.point_to_plane_distance_jacobian(Jt, t, pi_w)"
    ]
   },
   {
@@ -969,7 +970,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 171,
+   "execution_count": 293,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1021,7 +1022,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 172,
+   "execution_count": 294,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1038,7 +1039,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 173,
+   "execution_count": 295,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1058,7 +1059,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 174,
+   "execution_count": 296,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1082,18 +1083,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 297,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "SyntaxError",
-     "evalue": "invalid syntax (142138820.py, line 52)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;36m  Cell \u001b[0;32mIn[175], line 52\u001b[0;36m\u001b[0m\n\u001b[0;31m    workspace_plane = plane_list{plane_counter}\u001b[0m\n\u001b[0m                                ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Define a list of planes\n",
     "plane_list = [pi_top, pi_bottom]\n",
@@ -1128,9 +1120,9 @@
     "for time in np.arange(0, time_final + tau,tau):\n",
     "\n",
     "    # The inequality matrix and vector\n",
-    "    W = []\n",
-    "    w = []\n",
-    "    n = seven_dof_planar_robot.get_dim_configuration_space\n",
+    "    W = None\n",
+    "    w = None\n",
+    "    n = seven_dof_planar_robot.get_dim_configuration_space()\n",
     "\n",
     "    for joint_counter in range(0, n):\n",
     "\n",
@@ -1150,14 +1142,21 @@
     "\n",
     "            # Calculate the point to plane distance Jacobian\n",
     "            # We have to augment the Jp_pi with zeros\n",
-    "            Jp_pi = [DQ_Kinematics.point_to_plane_distance_jacobian(Jt, t, workspace_plane) zeros(1, n-joint_counter)]\n",
+    "            Jp_pi = np.hstack((DQ_Kinematics.point_to_plane_distance_jacobian(Jt, t, workspace_plane), np.zeros((1, n-joint_counter-1))))\n",
     "\n",
     "            # Calculate the point to plane distance\n",
     "            dp_pi = DQ_Geometry.point_to_plane_distance(t, workspace_plane)\n",
     "\n",
     "            # Wq <= w\n",
-    "            W = [W; -Jp_pi]\n",
-    "            w = [w; eta_d*dp_pi]\n",
+    "            if W is None:\n",
+    "                W =  -Jp_pi\n",
+    "            else:\n",
+    "                W = np.vstack((W, -Jp_pi))\n",
+    "            \n",
+    "            if w is None:\n",
+    "                w = np.array(eta_d * dp_pi)\n",
+    "            else:\n",
+    "                w = np.vstack((w, eta_d * dp_pi))\n",
     "\n",
     "\n",
     "    # Update the linear inequalities in the controller\n",
@@ -1202,7 +1201,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 298,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1219,7 +1218,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 299,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1236,12 +1235,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 300,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1 + E*(1i)"
+      ]
+     },
+     "execution_count": 300,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Define the initial joint configurations [rad]\n",
-    "q = (pi/8) * np.ones(7)\n",
+    "q = (pi / 8.) * np.ones(7)\n",
     "\n",
     "# Define the robot\n",
     "seven_dof_planar_robot = SevenDofPlanarRobotDH.kinematics()\n",
@@ -1260,7 +1270,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 301,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1280,7 +1290,19 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "set_inequality_constraint(): incompatible function arguments. The following argument types are supported:\n    1. (self: dqrobotics._dqrobotics._robot_control.DQ_KinematicConstrainedController, arg0: numpy.ndarray[numpy.float64[m, n]], arg1: numpy.ndarray[numpy.float64[m, 1]]) -> None\n\nInvoked with: <dqrobotics._dqrobotics._robot_control.DQ_ClassicQPController object at 0x11492de70>, array([[-0.0966597 , -0.13238047, -0.15171241, -0.15171241, -0.13238047,\n        -0.0966597 , -0.04998827]]), array(0.06186201)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[302], line 51\u001b[0m\n\u001b[1;32m     48\u001b[0m w \u001b[38;5;241m=\u001b[39m np\u001b[38;5;241m.\u001b[39marray(eta_d \u001b[38;5;241m*\u001b[39m D_tilde)\n\u001b[1;32m     50\u001b[0m \u001b[38;5;66;03m# Update the linear inequalities in the controller\u001b[39;00m\n\u001b[0;32m---> 51\u001b[0m \u001b[43mtranslation_controller\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mset_inequality_constraint\u001b[49m\u001b[43m(\u001b[49m\u001b[43mW\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mw\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m     53\u001b[0m \u001b[38;5;66;03m# Get the next control signal [rad/s]\u001b[39;00m\n\u001b[1;32m     54\u001b[0m u \u001b[38;5;241m=\u001b[39m translation_controller\u001b[38;5;241m.\u001b[39mcompute_setpoint_control_signal(q, vec4(td))\n",
+      "\u001b[0;31mTypeError\u001b[0m: set_inequality_constraint(): incompatible function arguments. The following argument types are supported:\n    1. (self: dqrobotics._dqrobotics._robot_control.DQ_KinematicConstrainedController, arg0: numpy.ndarray[numpy.float64[m, n]], arg1: numpy.ndarray[numpy.float64[m, 1]]) -> None\n\nInvoked with: <dqrobotics._dqrobotics._robot_control.DQ_ClassicQPController object at 0x11492de70>, array([[-0.0966597 , -0.13238047, -0.15171241, -0.15171241, -0.13238047,\n        -0.0966597 , -0.04998827]]), array(0.06186201)"
+     ]
+    }
+   ],
    "source": [
     "# Solver definition\n",
     "qp_solver = DQ_QuadprogSolver()\n",
@@ -1315,7 +1337,7 @@
     "    t = translation(x)\n",
     "    r = rotation(x)\n",
     "    l = Ad(r, i_)\n",
-    "    l_dq = l + E_*cross(t, l)\n",
+    "    l_dq = l + E_ * cross(t, l)\n",
     "\n",
     "    # Get the line-to-point distance Jacobian\n",
     "    Jl_p = DQ_Kinematics.line_to_point_distance_jacobian(Jl, l_dq, p)\n",
@@ -1324,12 +1346,12 @@
     "    Dl_p = DQ_Geometry.point_to_line_squared_distance(p, l_dq)\n",
     "\n",
     "    # Get the distance error\n",
-    "    D_safe = d_safe^2\n",
+    "    D_safe = d_safe ** 2\n",
     "    D_tilde = D_safe - Dl_p\n",
     "\n",
     "    # The inequality matrix and vector\n",
-    "    W = Jl_p\n",
-    "    w = eta_d*D_tilde\n",
+    "    W = np.array(Jl_p)\n",
+    "    w = np.array(eta_d * D_tilde)\n",
     "\n",
     "    # Update the linear inequalities in the controller\n",
     "    translation_controller.set_inequality_constraint(W, w)\n",
@@ -1338,7 +1360,7 @@
     "    u = translation_controller.compute_setpoint_control_signal(q, vec4(td))\n",
     "\n",
     "    # Move the robot\n",
-    "    q = q + u*tau\n",
+    "    q = q + u * tau\n",
     "\n",
     "    # Clear plot\n",
     "    # plot(seven_dof_planar_robot, q)\n",
