[dq3, dq4, dq5] Replacing <u> and </u>

--- a/dqrobotics/lesson3/lesson_dq3_dual_quaternion_basics_part1.ipynb
+++ b/dqrobotics/lesson3/lesson_dq3_dual_quaternion_basics_part1.ipynb
@@ -65,7 +65,7 @@
     "The set of dual numbers $\\mathbb{D}$ is yet a different way to extend $\\mathbb{R}$ . Any dual number can be written in the form\n",
     "\n",
     "\n",
-    "$$<u>d</u> =a+b\\varepsilon \\;,$$\n",
+    "$$\\underline{ d } =a+b\\varepsilon \\;,$$\n",
     "\n",
     "where $a,b\\in \\;$ $\\mathbb{R}$ . The algebra of dual numbers is based on the following property of the nilpotent dual unit\n",
     "\n",
@@ -75,7 +75,7 @@
     "For instance, the dual number\n",
     "\n",
     "\n",
-    "$${<u>d</u> }_1 =10-239\\varepsilon$$\n",
+    "$${\\underline{ d } }_1 =10-239\\varepsilon$$\n",
     "\n",
     "can be written using DQ Robotics as follows.\n"
    ]
@@ -129,7 +129,7 @@
     "For instance, for the dual numbers\n",
     "\n",
     "\n",
-    "$${<u>d</u> }_1 =a_1 +{\\varepsilon b}_1$$\n",
+    "$${\\underline{ d } }_1 =a_1 +{\\varepsilon b}_1$$\n",
     "\n",
     " ${\\underline{d} }_2 =a_2 +{\\varepsilon b}_2$ ,\n"
    ]
@@ -161,7 +161,7 @@
     "<a name=\"H_3C5A7462\"></a>\n",
     "#### Sum/Subtraction\n",
     "\n",
-    "$${<u>d</u> }_1 \\pm \\;{<u>d</u> }_2 =\\left(a_1 \\pm \\;a_2 \\right)+\\left(b_1 \\pm \\;b_2 \\right)\\varepsilon \\ldotp$$"
+    "$${\\underline{ d } }_1 \\pm \\;{\\underline{ d } }_2 =\\left(a_1 \\pm \\;a_2 \\right)+\\left(b_1 \\pm \\;b_2 \\right)\\varepsilon \\ldotp$$"
    ]
   },
   {
@@ -192,7 +192,7 @@
     "In the dual number product, the nilpotent property of the dual unit shows.\n",
     "\n",
     "\n",
-    "$$\\begin{array}{l} {<u>d</u> }_1 {<u>d</u> }_2 =\\left(a_1 a_2 \\right)+\\varepsilon \\left(a_1 b_2 +a_2 b_1 \\right)+\\varepsilon^2 \\left(b_1 b_2 \\right)\\\\ \\Rightarrow {<u>d</u> }_1 {<u>d</u> }_2 =\\left(a_1 a_2 \\right)+\\varepsilon \\left(a_1 b_2 +a_2 b_1 \\right) \\end{array}$$"
+    "$$\\begin{array}{l} {\\underline{ d } }_1 {\\underline{ d } }_2 =\\left(a_1 a_2 \\right)+\\varepsilon \\left(a_1 b_2 +a_2 b_1 \\right)+\\varepsilon^2 \\left(b_1 b_2 \\right)\\\\ \\Rightarrow {\\underline{ d } }_1 {\\underline{ d } }_2 =\\left(a_1 a_2 \\right)+\\varepsilon \\left(a_1 b_2 +a_2 b_1 \\right) \\end{array}$$"
    ]
   },
   {
@@ -214,7 +214,7 @@
     "The operator $P\\left(\\ldotp \\right)$ can be used to obtain the primary part of the dual number. (The primary part is that which is not multiplied by the dual unit)\n",
     "\n",
     "\n",
-    "$$P\\left(<u>d</u> \\right)=a$$"
+    "$$P\\left(\\underline{ d } \\right)=a$$"
    ]
   },
   {
@@ -236,7 +236,7 @@
     "The operator $D\\left(\\ldotp \\right)$ can be used to obtain the dual part of the dual number. (The dual number is that which is multiplied by the dual unit)\n",
     "\n",
     "\n",
-    "$$D\\left(<u>d</u> \\right)=b$$"
+    "$$D\\left(\\underline{ d } \\right)=b$$"
    ]
   },
   {
