--- a/dqrobotics/lesson4/lesson_dq4_dual_quaternion_basics_part2.ipynb
+++ b/dqrobotics/lesson4/lesson_dq4_dual_quaternion_basics_part2.ipynb
@@ -296,7 +296,7 @@
     "Also in high-school-level linear-algebra, you have been introduced to the equation of the plane. Unit dual quaternions can also be used to represent planes, in the form\n",
     "\n",
     "\n",
-    "$$<u>\\pi</u> ={\\mathit{\\mathbf{n}}}_{\\pi \\;} +\\varepsilon d_{\\pi \\;} ,$$\n",
+    "$$\\underline{\\pi} ={\\mathit{\\mathbf{n}}}_{\\pi \\;} +\\varepsilon d_{\\pi \\;} ,$$\n",
     "\n",
     "where ${\\mathit{\\mathbf{n}}}_{\\pi \\;} \\in$ ${\\mathbb{H}}_p \\cap {\\mathbb{S}}^3$ is the unit vector representing the plane's normal. In addition, $d_{\\pi \\;} \\in$ $\\mathbb{R}$ is the signed distance to the plane (with respect to the normal centered at the origin), that can be written as\n",
     "\n",
@@ -383,7 +383,7 @@
     "Therefore, the x-y plane can be represented by the unit dual quaternion\n",
     "\n",
     "\n",
-    "$${<u>\\pi</u> }_1 ={\\mathit{\\mathbf{n}}}_{\\pi ,1} +\\varepsilon d_{\\pi ,1} =\\hat{k} \\ldotp$$"
+    "$${\\underline{\\pi} }_1 ={\\mathit{\\mathbf{n}}}_{\\pi ,1} +\\varepsilon d_{\\pi ,1} =\\hat{k} \\ldotp$$"
    ]
   },
   {
@@ -634,7 +634,7 @@
     "Calculating the distance between two lines, ${\\underline{l} }_1 ,{\\underline{l} }_2 \\in {\\mathcal{H}}_p \\cap \\underline{S}$ is somewhat more complicated than the ones mentioned above so we will skip the details for now. You can check the following paper for details:\n",
     "\n",
     "\n",
-    "[<u> **Dynamic Active Constraints for Surgical Robots using Vector Field Inequalities.** </u>](https://arxiv.org/pdf/1804.11270.pdf)Marinho, M. M; Adorno, B. V; Harada, K.; and Mitsuishi, M. *IEEE Transactions on Robotics (T-RO)*, 35(5): 1166–1185. October 2019.\n",
+    "[\\underline{ **Dynamic Active Constraints for Surgical Robots using Vector Field Inequalities.** }](https://arxiv.org/pdf/1804.11270.pdf)Marinho, M. M; Adorno, B. V; Harada, K.; and Mitsuishi, M. *IEEE Transactions on Robotics (T-RO)*, 35(5): 1166–1185. October 2019.\n",
     "\n",
     "\n",
     "For now, it suffices to know that the distance between two lines can be obtained, using DQ Robotics, as follows\n"
