--- a/dqrobotics/lesson5/lesson_dq5_robot_control_basics_part1.ipynb
+++ b/dqrobotics/lesson5/lesson_dq5_robot_control_basics_part1.ipynb
@@ -120,17 +120,17 @@
     "The FKM of robot $R$ is quite straigthforward, and can be found using two pose transformations.\n",
     "\n",
     "\n",
-    "$$t_R^W (t)=\\textrm{translation}\\left({<u>x</u> }_1^W (\\theta_1 ){<u>x</u> }_R^1 (l_1 )\\right),$$\n",
+    "$$t_R^W (t)=\\textrm{translation}\\left({\\underline{x} }_1^W (\\theta_1 ){\\underline{x} }_R^1 (l_1 )\\right),$$\n",
     "\n",
     "where\n",
     "\n",
     "\n",
-    "$${<u>x</u> }_1^W (\\theta_1 )=\\cos \\left(\\frac{\\theta_1 }{2}\\right)+\\hat{k} \\sin \\left(\\frac{\\theta_1 }{2}\\right),$$\n",
+    "$${\\underline{x} }_1^W (\\theta_1 )=\\cos \\left(\\frac{\\theta_1 }{2}\\right)+\\hat{k} \\sin \\left(\\frac{\\theta_1 }{2}\\right),$$\n",
     "\n",
     "is the rotation about the joint value (remember that the rotational joint pivots about its z-axis) and\n",
     "\n",
     "\n",
-    "$${<u>x</u> }_R^1 (l)=1+\\frac{1}{2}\\varepsilon l_1 \\hat{\\imath} ,$$\n",
+    "$${\\underline{x} }_R^1 (l)=1+\\frac{1}{2}\\varepsilon l_1 \\hat{\\imath} ,$$\n",
     "\n",
     "is the translation of $l_1$ about the rotated x-axis.\n"
    ]
@@ -226,17 +226,17 @@
     "We can start from the FKM\n",
     "\n",
     "\n",
-    "$$t_R^W (t)=\\textrm{translation}\\left({<u>x</u> }_1^W (\\theta_1 ){<u>x</u> }_R^1 (l_1 )\\right),$$\n",
+    "$$t_R^W (t)=\\textrm{translation}\\left({\\underline{x} }_1^W (\\theta_1 ){\\underline{x} }_R^1 (l_1 )\\right),$$\n",
     "\n",
     "note that the total pose transformation is\n",
     "\n",
     "\n",
-    "$${<u>x</u> }_1^W (\\theta_1 ){<u>x</u> }_R^1 (l_1 )=\\left\\lbrack \\cos \\left(\\frac{\\theta_1 }{2}\\right)+\\hat{k} \\sin \\left(\\frac{\\theta_1 }{2}\\right)\\right\\rbrack +\\frac{1}{2}\\varepsilon l_1 \\left\\lbrack \\hat{\\imath} \\cos \\left(\\frac{\\theta_1 }{2}\\right)+\\hat{\\jmath} \\sin \\left(\\frac{\\theta_1 }{2}\\right)\\right\\rbrack$$\n",
+    "$${\\underline{x} }_1^W (\\theta_1 ){\\underline{x} }_R^1 (l_1 )=\\left\\lbrack \\cos \\left(\\frac{\\theta_1 }{2}\\right)+\\hat{k} \\sin \\left(\\frac{\\theta_1 }{2}\\right)\\right\\rbrack +\\frac{1}{2}\\varepsilon l_1 \\left\\lbrack \\hat{\\imath} \\cos \\left(\\frac{\\theta_1 }{2}\\right)+\\hat{\\jmath} \\sin \\left(\\frac{\\theta_1 }{2}\\right)\\right\\rbrack$$\n",
     "\n",
     "By the definition of the translation operation for any $\\underline{x}$ $\\in$ $\\underline{\\mathcal{S}}$\n",
     "\n",
     "\n",
-    "$$\\textrm{translation}\\left(<u>x</u> \\right)=2D\\left(<u>x</u> \\right)P{\\left(<u>x</u> \\right)}^*$$\n",
+    "$$\\textrm{translation}\\left(\\underline{x} \\right)=2D\\left(\\underline{x} \\right)P{\\left(\\underline{x} \\right)}^*$$\n",
     "\n",
     "Using the operation above and two trigonometric identities, we reach the following\n",
     "\n",
